Don't allow negative calendar years

The concept is nonsensical and trying to display them crashes the
app displaying the calendar.

BUG: 430320
FIXED-IN: 5.78